microk8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: orders
        image: dockeralexcmb/orders-service:v1.2
        ports:
        - containerPort: 8002
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP  # Externe pour tests (ou ClusterIP + port-forward)
