microk8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: products
        image: dockeralexcmb/products-service:v1.2
        ports:
        - containerPort: 8001
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
