microk8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      securityContext:
        runAsUser: 1000  # Non-root
        fsGroup: 2000
      containers:
      - name: users
        image: dockeralexcmb/users-service:v1.2
        ports:
        - containerPort: 8000
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP  # Interne
